# testrig

./: .gitignore  AI-DECLARATION.md  LICENSE  README.md  pyproject.toml  testrig.spec
docs/: manpage.rst
testrig/: __init__.py  cli.py  gdb_traceback_on_stop.py  rig.py  settings.py  util.py
testrig/distro/: __init__.py  fedora.py  ubuntu.py
testrig/packagemanager/: __init__.py  apt.py  dnf.py
tests/: test_distro.py  test_rig.py  test_settings.py
