[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "testrig"
version = "0.0.1"
authors = [
    { name="Tim Flink", email="Tim.Flink@amd.com"},
]
description = "A tool for coordinating runs, output and data gathering for existing, external test suites"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
    "click"
]

[project.scripts]
testrig = "testrig.cli:cli"

[tool.ruff]
line-length = 120