[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "testrig"
version = "0.0.2"
authors = [
    { name="Tim Flink", email="Tim.Flink@amd.com"},
]
description = "A tool for coordinating runs, output and data gathering for existing, external test suites"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
    "click"
]

[project.scripts]
testrig = "testrig.cli:cli"

[tool.ruff]
line-length = 120
