[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "testrig"
version = "0.0.7"
authors = [
    { name="Tim Flink", email="Tim.Flink@amd.com"},
]
description = "A tool for coordinating runs, output and data gathering for existing, external test suites"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
    "click"
]

[project.scripts]
testrig = "testrig.cli:cli"

[project.urls]
Homepage = "https://github.com/AMD-Linux-Open-Source-Graphics/testrig"
Issues = "https://github.com/AMD-Linux-Open-Source-Graphics/testrig/issues"
Repository = "https://github.com/AMD-Linux-Open-Source-Graphics/testrig.git"

[tool.ruff]
line-length = 120
